# movie-recommender-ai

./: .gitignore  LICENSE  README.md  REQUIREMENTS.TXT  generate_project.py  pyproject.toml
frontend/: app.js  index.html  style.css
src/: main.py
src/agents/: base.py  critic.py  movie_expert.py  user_analyst.py
src/api/routes/: recommendation.py
src/api/schemas/: request.py  response.py
src/config/: llm_config.py  settings.py
src/core/: agent_crew.py  chains.py  graph_workflow.py  runner.py
src/models/: feedback.py  movie.py  user.py
src/tests/: conftest.py
src/tests/integration/: test_api.py
src/tests/unit/: test_tools.py
src/tools/: embedding.py  movie_db.py
