[project]
name = "movie-recommender-agent"
version = "0.1.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.3.0",
    "crewai>=0.80.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.28.0",
]